--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -58,8 +58,8 @@
 
 .code {
   padding: 0.75rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono",
+    "Bitstream Vera Sans Mono", "Courier New", monospace;
   font-size: 1.1rem;
   background: #fafafa;
   border-radius: 5px;
@@ -93,7 +93,7 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem;
   font-size: 1.5rem;
 }
 
